Fix T99677: crash when convex hull node is used on empty mesh

Fundamental issue is that the attribute api returns none, because
the custom data api returns null for a layer when the size of 0.
This should be improved separately.